--- a/_sass/partials/_projects.scss
+++ b/_sass/partials/_projects.scss
@@ -1,15 +1,183 @@
-.ficticia {
-	.ficticia-brand {
-		width: 50%;
-		height:50%;
-	}
+.project-card {
+    margin: 0 0 30px;
+    padding: 0 0 30px;
+
+    border-bottom: 2px solid $c-yellow-l2;
+
+    &:last-child {
+        margin: 0 0 50px;
+        padding: 0;
+
+        border-bottom: none;
+    }
+
+    &:first-child { margin-top: 100px; }
+
+    &__capsule {
+        text-align: center;
+
+        position: relative;
+        display:  block;
+        height: 175px;
+        margin: 0;
+        padding: 0;
+
+        overflow: hidden;
+        transition: $anim-bounce 0.5s 0.1s;
+    }
+
+    &__title {
+        font-size: 30px;
+        line-height: 1;
+        letter-spacing: 0;
+
+        margin: 20px 0 10px;
+
+        color: $c-black;
+        transition: $anim-bounce 0.5s;
+    }
+
+    &__subtitle {
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: 0;
+
+        margin: 0;
+
+        color: $c-gray;
+        transition: $anim-bounce 0.5s;
+    }
+
+    &__icon-group {
+        height: auto;
+        margin-top: 25px;
+
+        transition: ease 0.5s;
+    }
+
+    &__icon {
+        font-size: 24px;
+
+        margin: 0 5px;
+
+        color: $c-yellow-l1;
+
+        &--1 { transition: ease 0.25s 0.1s; }
+        &--2 { transition: ease 0.25s 0.15s; }
+        &--3 { transition: ease 0.25s 0.2s; }
+    }
+
+    &__cover {
+        position: relative;
+        display: block;
+        height: 100%;
+        padding: 0px;
+
+        background: $c-white;
+    }
+
+    &__info {
+        position: relative;
+        display: block;
+        height: 100%;
+        padding: 0px;
+
+        z-index: 300;
+        transition: ease 0.75s;
+    }
+
+    &__bg {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 175px;
+        margin: 0;
+        top: 0;
+        left: 0;
+
+        z-index: 100;
+    }
+
+    &__frame {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        top: 0;
+        left: 0;
+
+        opacity: 0.9;
+        background: $c-white;
+        transition: ease 0.75s;
+    }
+
+    &__frame-image {
+        width: 100%;
+        height: auto;
+    }
 }
 
 @media (min-width: $screen-tablet) {
-  .ficticia {
-      .ficticia-brand {
-          width: 30%;
-          height:30%;
-      }
+    .project-card {
+        &__capsule { height: 220px; }
+
+        &__bg { height: 220px; }
+
+        &__title { font-size: 46px; }
+
+        &__subtitle { font-size: 18px; }
+
+        &__info { padding: 10px; }
+
+        &__cover { padding: 20px; }
+    }
+}
+
+@media (min-width: $screen-desktop) {
+    .project-card {
+        &:hover {
+            text-decoration: none;
+
+            .project-card__title {
+                letter-spacing: 0.125em;
+
+                margin: 0 0 10px;
+
+                color: $c-yellow;
+            }
+
+            .project-card__subtitle {
+                letter-spacing: 0.25em;
+
+                color: $c-orange-l1;
+            }
+
+            .project-card__frame { opacity: 0.75; }
+
+            .project-card__info { background: $c-light-d2; }
+
+            .project-card__icon-group { margin-top: 15px; }
+
+            .project-card__icon {
+                font-size: 24px;
+
+                margin: 0 7px;
+
+                color: $c-yellow-l1;
+            }
+        }
+
+        &__capsule { height: 300px; }
+
+        &__bg { height: 300px; }
+
+        &__title { font-size: 52px; }
+
+        &__icon { color: transparent; }
+
+        &__info { padding: 30px; }
+
+        &__cover { padding: 50px; }
     }
 }
