--- a/css/main.scss
+++ b/css/main.scss
@@ -68,15 +68,13 @@
 
 @import "modules/general",
         "modules/icons",
-        "modules/forms",
-        "modules/cards",
-        "modules/typography",
-        "modules/images";
+        "modules/typography";
 
 @import "partials/home",
         "partials/header",
         "partials/footer",
         "partials/blog",
         "partials/projects",
+        "partials/project",
         "partials/contact",
         "partials/pages";
