--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -13,7 +13,7 @@ layout: default
         <div class="project-card__cover">
           <div class="project-card__info">
             <h2 class="project-card__title">{{ post.title }}</h2>
-            <h3 class="project-card__subtitle">{{ post.subtitle }}</h3>
+            <span class="project-card__subtitle">{{ post.subtitle }}</span>
             <div class="project-card__icon-group">
               {% for icon in post.icons %}
 
