responsiveness ok-ish

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,20 @@
     <a class="footer__brand" href="{{ site.url }}" title="{{ site.data.strings.title }}">
       <img class="inject-these-svgs" src="{{ site.imgurl }}/brand.svg">
     </a>
+
+    <ul class="footer__list">
+      <div class="footer__languages">
+        {% assign language = site.posts | where:"name", page.name | sort: 'path' %}
+
+        {% for post in language %}
+        <li class="footer__item">
+          <a class="footer__item-link footer__item-link footer__languages__item-link footer__languages__item-link--{{ post.lang }}" href="{{ post.url }}">{{ post.lang }}</a>
+        </li>
+        {% endfor %}
+      </div>
+
+      <li class="footer__item">
+        <a class="footer__item-link footer__item-link footer__icon icon icon--facebook" href="{{ site.data.strings.facebook }}" target='_blank' ></a>
+      </li>
+    </ul>
 </footer>
