--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
     <div class="js-page-wrapper page-wrapper page-wrapper--{{ page.title | slugify }}">
-      <section class="section section--{{ page.title | slugify }}">
+      <section class="js-section section section--{{ page.title | slugify }}">
 
       {{ content }}
 
