--- a/css/main.scss
+++ b/css/main.scss
@@ -66,8 +66,7 @@
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/utilities";
 // endbower */
 
-@import "modules/general",
-        "modules/icons",
+@import "modules/icons",
         "modules/typography";
 
 @import "partials/home",
