--- a/_sass/modules/_typography.scss
+++ b/_sass/modules/_typography.scss
@@ -1,3 +1,10 @@
+html {
+    position: relative;
+    min-height: 100%;
+
+    * { box-sizing: border-box; }
+}
+
 // typography variables
 // --------------------------------------------------
 
