--- a/_sass/partials/_header.scss
+++ b/_sass/partials/_header.scss
@@ -11,7 +11,7 @@ $header-cont-height-comp: 36px;
 	box-shadow: 0 0 transparent;
 	background: $c-white;
 	z-index: 1050;
-	transition: $anim-bounce 0.25s;
+	transition: height $anim-bounce 0.25s;
 
 	@include clearfix();
 
@@ -54,7 +54,7 @@ $header-cont-height-comp: 36px;
 		padding: 0 0 0 10px;
 
 		color: $c-yellow-l1;
-		transition: $anim-bounce 0.25s;
+		transition: height $anim-bounce 0.25s;
 
 		&:hover { color: $c-yellow; }
 
@@ -74,7 +74,7 @@ $header-cont-height-comp: 36px;
 
 		fill: $c-white;
 		background: $c-yellow;
-		transition: $anim-bounce 0.25s ;
+		transition: width $anim-bounce 0.25s, height $anim-bounce 0.25s, padding $anim-bounce 0.25s;
 
 		&--compressed {
 			width: $header-cont-height-comp;
