fixed header animation

--- a/_sass/partials/_header.scss
+++ b/_sass/partials/_header.scss
@@ -11,7 +11,7 @@ $header-cont-height-comp: 36px;
 	box-shadow: 0 0 transparent;
 	background: $c-white;
 	z-index: 1050;
-	transition: height $anim-bounce 0.25s;
+	transition: padding $anim-bounce 0.25s,  box-shadow $anim-bounce 0.25s;
 
 	@include clearfix();
 
@@ -23,7 +23,8 @@ $header-cont-height-comp: 36px;
 		float: left;
 		height: $header-cont-height;
 		margin: 0;
-        padding: 0;
+    padding: 0;
+		transition: height $anim-bounce 0.25s,  line-height $anim-bounce 0.25s;
 
 		&--right {
 			display: none;
@@ -54,7 +55,7 @@ $header-cont-height-comp: 36px;
 		padding: 0 0 0 10px;
 
 		color: $c-yellow-l1;
-		transition: height $anim-bounce 0.25s;
+		transition: height $anim-bounce 0.25s, line-height $anim-bounce 0.25s;
 
 		&:hover { color: $c-yellow; }
 
